--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ edition = "2021"
 log = "0.4.17"
 env_logger = "0.10.0"
 clap = { version = "4.3.0", features = ["derive"] }
+bytemuck = { version = "1.13.1", features = ["derive"] }
