--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "win16ne"
-version = "0.1.0"
-authors = ["Masaki Hara <ackie.h.gmai@gmail.com>"]
+version = "0.1.1"
+authors = ["Masaki Hara <ackie.h.gmai@gmail.com>", "Alexey Tolstopyatov <atolstopyatov2017@vk.com>"]
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
